--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
-NATIVEPHP_APP_ID=com.dyanakiev.subscriptiontracker
+NATIVEPHP_APP_ID=com.dyanakiev.medicinetracker
 NATIVEPHP_APP_VERSION="DEBUG"
 NATIVEPHP_APP_VERSION_CODE="1"
 
-APP_NAME="Subscription Tracker"
+APP_NAME="Medicine Tracker"
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
