--- a/package.json
+++ b/package.json
@@ -11,6 +11,13 @@
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^2.0.0",
         "tailwindcss": "^4.0.0",
-        "vite": "^7.0.7"
+        "vite": "^7.0.7",
+        "@vitejs/plugin-react": "^4.3.4"
+    },
+    "dependencies": {
+        "@inertiajs/core": "^1.0.0",
+        "@inertiajs/react": "^1.0.0",
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1"
     }
 }
